vanilla_weighted_load_balancer/envoy.yaml
static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address: { address: 0.0.0.0, port_value: 8080 }
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
          stat_prefix: ingress_http
          codec_type: AUTO
          route_config:
            name: local_route
            virtual_hosts:

            - name: local_service
              domains: ["*"]
              routes:

              # Weighted load balancing example
              - match:
                  prefix: "/version"
                route:
                  weighted_clusters:
                    clusters:
                    - name: cluster_version_1
                      weight: 10
                    - name: cluster_version_2
                      weight: 90
              # ----

          http_filters:
          - name: envoy.router

  clusters:

  # Service version 1
  - name: cluster_version_1
    connect_timeout: 0.25s
    type: LOGICAL_DNS
    dns_lookup_family: V4_ONLY
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: cluster_version_1
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:

                # Container DNS
                address: version_1
                port_value: 8000

  # Service version 2
  - name: cluster_version_2
    connect_timeout: 0.25s
    type: LOGICAL_DNS
    dns_lookup_family: V4_ONLY
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: cluster_version_2
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:

                # Container DNS
                address: version_2
                port_value: 8000
